# cpp-course

./: CMakeLists.txt
01_oop/: CMakeLists.txt
01_oop/a_basics/: CMakeLists.txt  main.cpp
01_oop/b_inheritance/: CMakeLists.txt  jimmy.h  main.cpp  rodic.h  timmy.h
01_oop/c_multiple_inheritance/: CMakeLists.txt  elephant.cpp  elephant.h  elepig.cpp  elepig.h  main.cpp  pig.cpp  pig.h
01_oop/d_operators/: CMakeLists.txt  main.cpp
02_raii/: CMakeLists.txt  main.cpp  test.txt
03_exceptions/: CMakeLists.txt  main.cpp
04_stl/: CMakeLists.txt
04_stl/a_string/: CMakeLists.txt  main.cpp
04_stl/b_vector/: CMakeLists.txt  main.cpp
04_stl/c_list/: CMakeLists.txt  main.cpp
04_stl/d_map/: CMakeLists.txt  main.cpp
04_stl/e_set/: CMakeLists.txt  main.cpp
04_stl/f_misc/: CMakeLists.txt  main.cpp
05_io/: CMakeLists.txt
05_io/a_stringstream/: CMakeLists.txt  main.cpp
05_io/b_files/: CMakeLists.txt  main.cpp
05_io/c_iomanip/: CMakeLists.txt  main.cpp
06_memory/: CMakeLists.txt
06_memory/a_unique_ptr/: CMakeLists.txt  main.cpp
06_memory/b_shared_ptr/: CMakeLists.txt  main.cpp
06_memory/c_weak_ptr/: CMakeLists.txt  main.cpp
07_threads/: CMakeLists.txt
07_threads/a_basics/: CMakeLists.txt  main.cpp
07_threads/b_mutex/: CMakeLists.txt  main.cpp
07_threads/c_cond_variables/: CMakeLists.txt  main.cpp
07_threads/d_atomic/: CMakeLists.txt  main.cpp
08_random/: CMakeLists.txt  main.cpp
09_templates/: CMakeLists.txt  main.cpp
10_special/: CMakeLists.txt
10_special/a_constexpr/: CMakeLists.txt  main.cpp
10_special/b_lambda/: CMakeLists.txt  main.cpp
10_special/c_auto/: CMakeLists.txt  main.cpp
10_special/d_stl/: CMakeLists.txt  main.cpp
10_special/e_enum_class/: CMakeLists.txt  main.cpp
10_special/f_range_based_for/: CMakeLists.txt  main.cpp
11_cmake/: CMakeLists.txt
11_cmake/dynamic/: CMakeLists.txt  dyninclude.h  dynmain.cpp
11_cmake/program/: CMakeLists.txt  general.h  main.cpp  module.cpp
12_valgrind_fuckups/: CMakeLists.txt
12_valgrind_fuckups/a_leak/: CMakeLists.txt  main.cpp
12_valgrind_fuckups/b_leak/: CMakeLists.txt  main.cpp
12_valgrind_fuckups/c_range/: CMakeLists.txt  main.cpp
12_valgrind_fuckups/d_range/: CMakeLists.txt
13_gdb_fuckups/: CMakeLists.txt
13_gdb_fuckups/a_segfault/: CMakeLists.txt  main.cpp
13_gdb_fuckups/b_segfault/: CMakeLists.txt  main.cpp
13_gdb_fuckups/c_deadlock/: CMakeLists.txt  main.cpp
13_gdb_fuckups/c_segfault/: CMakeLists.txt
14_perf_fuckups/: CMakeLists.txt
14_perf_fuckups/a_slow/: CMakeLists.txt  main.cpp
presentations/01_basics/: 01_basics.tex
presentations/02_raii/: 02_raii.tex
presentations/03_exceptions/: 03_exceptions.tex
presentations/04_stl/: 04_stl.tex
presentations/05_streams/: 05_streams.tex
presentations/06_memory/: 06_memory.tex
presentations/07_threads/: 07_threads.tex
presentations/08_random/: 08_random.tex
presentations/09_templates/: 09_templates.tex
presentations/10_special/: 10_special.tex
presentations/11__14_cmake_gdb_grind_perf/: 11__14_cmake_gdb_grind_perf.tex
