CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(cpp-course)

SET(output_dir "bin")

# Globally set output directory for single-configuration environments (GCC, ..)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${output_dir}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${output_dir}")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${output_dir}")

# Globally set output directory for multi-configuration environments (MS Visual Studio, ..)
FOREACH(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
    SET(ORIG_OUT_CONFIG ${OUTPUTCONFIG})
    STRING(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/${output_dir}/${ORIG_OUT_CONFIG}")
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/${output_dir}/${ORIG_OUT_CONFIG}")
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/${output_dir}/${ORIG_OUT_CONFIG}")
ENDFOREACH(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

ADD_SUBDIRECTORY(01_oop)
ADD_SUBDIRECTORY(02_raii)
ADD_SUBDIRECTORY(03_exceptions)
ADD_SUBDIRECTORY(04_stl)
ADD_SUBDIRECTORY(05_io)
ADD_SUBDIRECTORY(06_memory)
ADD_SUBDIRECTORY(07_threads)
ADD_SUBDIRECTORY(08_random)
ADD_SUBDIRECTORY(09_templates)
ADD_SUBDIRECTORY(10_special)
ADD_SUBDIRECTORY(12_valgrind_fuckups)
ADD_SUBDIRECTORY(13_gdb_fuckups)
ADD_SUBDIRECTORY(14_perf_fuckups)

